<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lifeograph</string>
    <string name="create_diary">Create a New Diary</string>
    <string name="about">About..</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>
    <string name="logoutwosaving">Log out without Saving</string>
    <string name="logoutwosaving_confirm">Are you sure you want to log out without saving?</string>
    <string name="today">Today</string>
    <string name="calendar">Calendar</string>
    <string name="format">Format</string>
    <string name="favorite">Favorite</string>
    <string name="tags">Tags</string>
    <string name="entries">Entries</string>
    <string name="chapters">Chapters</string>
    <string name="all_entries">All Entries</string>
    <string name="entry_last_changed_on">Entry last changed on</string>
    <string name="entry_dismiss_confirm">Are you sure you want to dismiss the current entry?</string>
    <string name="tag_dismiss_confirm">Are you sure you want to dismiss the current tag?</string>
    <string name="chapter_dismiss_confirm">Are you sure you want to dismiss the current chapter?</string>
    <string name="storage_not_available">External storage is not available or read-only</string>
    <string name="filter_tags">Filter or create</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_size">Sort by Size</string>
    <string name="empty_entry">&lt;empty entry&gt;</string>
    <string name="add_topic">Add Topic..</string>
    <string name="add_entry">Add Entry</string>
    <string name="create_entry">Create Entry</string>
    <string name="create_chapter">Create Chapter</string>
    <string name="create_topic">Create Topic</string>
    <string name="add">Add</string>
    <string name="dismiss_">Dismiss..</string>
    <string name="dismiss">Dismiss</string>
    <string name="rename_">Rename..</string>
    <string name="rename">Rename</string>
    <string name="toggle_favorite">Toggle Favoredness</string>
    <string name="todo">TODO</string>
    <string name="new_diary_name">Enter a name for the new diary:</string>
    <string name="create">Create</string>
    <string name="program_name">Lifeograph for Android</string>
    <string name="version">Version: 0.2 [ALPHA]</string>
    <string name="textview">TextView</string>
    <string name="placeholder">placeholder text</string>
    <string name="icon">icon</string>
    <string name="copyright">&#169; 2012, Ahmet Öztürk</string>
    <string name="checkbox_icon">☑</string>
    <string name="B">B</string>
    <string name="I">I</string>
    <string name="S">S</string>
    <string name="H">H</string>
    <string name="welcome">Welcome to Lifeograph for Android!</string>
    <string name="caution_alpha">THIS IS A TEST VERSION. DO NOT USE FOR SERIOUS PURPOSES.</string>
    <string name="diaries">Diaries</string>
    <string name="import_">Import</string>

</resources>