<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="2dp"
        android:baselineAligned="true" >

        <Button
            android:id="@+id/buttonBold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/B" />

        <Button
            android:id="@+id/buttonItalic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/I" />

        <Button
            android:id="@+id/buttonStrikethrough"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/S" />

        <Button
            android:id="@+id/buttonHighlight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/H" />

        <!-- Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkbox_icon" /-->

        <!-- ImageButton
            android:id="@+id/ImageButton1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_favorite" /-->

    </LinearLayout>
    <EditText
    	android:id="@+id/editTextEntry"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:gravity="top"
    	android:inputType="textMultiLine" >
    	<requestFocus />
    </EditText>
</LinearLayout>
